# printnanny-desktop

./: .eslintrc  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.env/: .env  .env.dev  .env.production
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bootfile.rs  disks.rs  error.rs  imager.rs  lib.rs  main.rs
src/components/: DesktopNavbar.vue  Home.vue  HomeLayout.vue  MobileNavbar.vue  SideNavbar.vue
src/components/alerts/: StickyAlerts.vue
src/components/devices/: DeviceActionMenu.vue
src/components/forms/: AdvancedSettingsForm.vue  ImageSettingsForm.vue  ImagerSettingsForm.vue  LoginForm.vue  TwoFactorForm.vue
src/components/imager/: ChooseImage.vue  CustomizeImage.vue  FlashImage.vue  ImagerSettingsPopup.vue  ImagerView.vue  ProgressBar.vue  SelectDisk.vue
src/components/layouts/: HomeLayout.vue
src/components/nav/: AlgoliaHit.ts  DesktopNavbar.vue
src/components/views/: DashboardView.vue  JobQueueView.vue  PrinterView.vue  SettingsView.vue
src/data/: urls.ts
src/routes/: index.ts
src/stores/: account.ts  alerts.ts  dashboard.ts  devices.ts  imager.ts  settings.ts
src/types/: alerts.ts  imager.ts  index.ts
src/utils/: auth.ts  device.ts  error.ts  imager.ts  text.ts
src/utils/imager/: cloudInit.ts  country.ts  imager.ts  keyboard.ts  timezone.ts
tests/: cloudinit.test.ts
